# crypto-analyst

./: .env.example  .gitignore  README.md  pyproject.toml
prompts/: system_groq.md  system_v1.md  user_template_groq.md  user_template_v1.md
scripts/: compare_double_line_backtest.py  generate_favicon.py  run-web.sh
src/analyst/: __init__.py  cli.py  config.py
src/analyst/backtest/: __init__.py  classic.py  engine.py
src/analyst/compute/: __init__.py  conditional_edge.py  cycle_theory.py  fibonacci.py  indicators.py  jack_levels.py  kelly.py  level_context.py  market_schedule.py  plan.py  position_sizing.py  structure.py  volume.py
src/analyst/data/: __init__.py  derivatives.py  fetcher.py  macro.py  news.py  snapshot.py  ws_kline.py
src/analyst/llm/: __init__.py  analyst.py  chat.py  digest.py  prompts.py
src/analyst/monitor/: digest_loop.py  engine.py  hub.py  news_sentinel.py  notifier.py  ratio.py  rules.py  schedule_reminders.py  serialize.py
src/analyst/stats/: __init__.py  ai_benchmark.py  progress.py  report.py  weakness.py
src/analyst/storage/: __init__.py  db.py  models.py  repo.py
src/analyst/trading/: __init__.py  paper.py
src/analyst/training/: __init__.py  verify.py  (+2 more)
tests/: test_ai_confirm_tf.py  test_ai_layer.py  test_backtest.py  test_classic_backtest.py  test_compare.py  test_conditional_edge.py  test_cycle_theory.py  test_double_line.py  test_fibonacci.py  test_indicators.py  test_jack_levels.py  test_kelly.py  test_level_context.py  test_market_schedule.py  test_new_quant_layer.py  test_paper.py  test_plan.py  test_rules.py  test_structure.py  test_verify.py  test_ws_kline.py
(+13 files in other folders)
