[project]
name = "crypto-analyst"
version = "0.1.0"
description = "AI-powered crypto market analysis, outlook, and outcome verification"
requires-python = ">=3.11"
authors = [
    { name = "Eamon" },
]
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",

    # Data
    "ccxt>=4.2.0",

    # LLM (支持多 provider：DeepSeek / OpenAI / Anthropic)
    "anthropic>=0.34.0",
    "openai>=1.40.0",       # DeepSeek 走 OpenAI 兼容协议

    # Storage
    "sqlmodel>=0.0.21",

    # Config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",

    # Utils
    "diskcache>=5.6.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

scheduler = [
    "apscheduler>=3.10.0",
]

web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

dashboard = [
    "streamlit>=1.36.0",
    "plotly>=5.22.0",
]

[project.scripts]
analyst = "analyst.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analyst"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
